--- a/test-dep.yml
+++ b/test-dep.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: con-fast
-        image: <본인ECR주소>/fast:2
+        image: 879405774439.dkr.ecr.ap-northeast-2.amazonaws.com/fast:2
         ports:
         - containerPort: 8000
 ---
